Added video link

--- a/docs/_posts/2024-07-29-Week-2.md
+++ b/docs/_posts/2024-07-29-Week-2.md
@@ -11,7 +11,7 @@ tags:
 
 # Summary
 
-This week, we released **BT Studio 0.5**, featuring integration with the Robotics Backend (RB) from JdeRobot. This RB is a Docker container that provides the necessary tools for launching a omplete simulation environment which can be visualized through a browser.
+This week, we released **BT Studio 0.5**, featuring integration with the Robotics Backend (RB) from JdeRobot. This RB is a Docker container that provides the necessary tools for launching a omplete simulation environment which can be visualized through a browser. I also collaborated [creating a video](https://www.youtube.com/watch?v=eJNze1xCVi0) showcasing the new version
 
 My primary contribution was adding basic support for both the existing Gazebo worlds (referred to as "universes" in RB terminology) and custom ones that users can provide through a zip file. This required changes to the RB, the BT Studio *tree_api* backend, and the web frontend.
 
