--- a/docs/_posts/2024-08-05-Week-10.md
+++ b/docs/_posts/2024-08-05-Week-10.md
@@ -32,7 +32,7 @@ The subtree management endpoints work without any modifications. The subtrees ar
 However, I realized that the tree generation functionality has two big issues for the multilevel composition: 
 
 * No easy way to call the code N-times to account for all the multilevel subtrees. With the current implementation, even if it is easy to detect the depth of the tree, the tree generator wouldn't work. 
-* The translation of subtree's JSON files to XML is executed before the tree generation. As new trees may be discovered at N-depth in the tree, this would require translating and generateing at the same time, obfuscating the business logic. 
+* The translation of subtree's JSON files to XML is executed before the tree generation. As new trees may be discovered at N-depth in the tree, this would require translating and generating at the same time, obfuscating the business logic. 
 
 # Contributed PRs
 
